--- a/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
@@ -4,6 +4,15 @@ header {
 	border-color: $color;
 }
 
+/*#expense_form{
+	margin: auto !important;
+	width: 200px !important;
+	input{
+		margin:0;
+		width: 100%;
+	}
+}*/
+
 /*pie chart*/
 .pie_chart{
 	height: 300px; 
@@ -153,13 +162,12 @@ table.table.table-condensed td{
 }
 
 span#legend {
-	float: right;
 	font-size: 11px;
 	margin-bottom: 22px;
 }
 
 .add-expense, .add-inflow, .add_typeexpense {
-	padding-left: 0;
+	padding: 0;
 	margin-bottom:20px;
 	button {
 		background-color: $color;
@@ -167,6 +175,10 @@ span#legend {
 		width: 100%;
 		margin: 0;
 	}
+}
+
+.add-expense {
+	padding-right: 0;
 }
 .add_typeexpense button {
 	font-size:12px;
@@ -392,8 +404,12 @@ a:hover, a:focus {
 
 .content-wrap section.content-current {
 	display: block;
-	margin:20px 0 0 0;
+	margin-top:40px;
 
+}
+#section-topline-depenses{
+	margin-top: -40px;
+	z-index: -2;
 }
 
 
@@ -456,6 +472,7 @@ a:hover, a:focus {
 	margin:0 10px 0 10px;
 	text-align: left;
 	height: 50px;
+	z-index: 1;
 	a{
 		color:$color;
 	}
