--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -219,7 +219,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                             <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                            <h4 class="modal-title" id="myModalLabel">{{'add_typeguest' |trans}}</h4>
+                            <h4 class="modal-title" id="myModalLabel">{{'update_typeguest' |trans}}</h4>
                             </div>
                             <div class="modal-body">
                                     <div id="updatetypeguest_form">
@@ -229,7 +229,7 @@
                                     </div>
 
                                 <p>
-                                    <input type="submit" value="{{'add' |trans}}">
+                                    <input type="submit" value="{{'update' |trans}}">
                                 </p>
 
                             </div>
