--- a/src/PlanIt/TransportationBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/layout.html.twig
@@ -15,4 +15,5 @@
                     '%kernel.root_dir%/Resources/js/*.js'  %}
           <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
+    <script src="{{ asset('js/autosize.js') }}"></script>
 {% endblock %}
