--- a/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
+++ b/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
@@ -4,20 +4,51 @@ header {
 	border-color: $color;
 }
 
-.bt_place button{
-	background-color: $color;
-	padding: 4px 18px;
-	width: 100%;	
-	margin-bottom: 40px;
+input{
+	@include border-radius(5px);
+	padding: 2px 5px;
 }
 
-.img_place{
-	height: 200px;
-	margin-bottom: 20px;
-	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    position: relative;
+button {
+	background-color: $color; 
+}
+
+#state_place {
+	#state_label {
+		float:left;
+		margin-right: 10px;
+	}
+	.selectize-input{
+		width: 40% !important;
+	}
+}
+
+#placecontract_form{
+	background-color: lighten($neutral,10%);
+	@include border-radius(3px);
+	cursor: pointer;
+	padding: 2px 5px;
+}
+
+.bt_transportation{
+	button{
+		background-color: $color;
+		padding: 4px 18px;
+		width: 100%;	
+		margin-bottom: 10px;
+	}
+}
+.bt_transportation.file {
+	float: right;
+	#modify_contract{
+		width:100% !important;
+	}
+}
+.contract {
+	float:left;
+}
+.short_input{
+	width:50px;
 }
 
 .empty_module {
@@ -27,25 +58,57 @@ header {
   	font-size: 16px;
 }
 
-#transportationimage_form, #transportationcontract_form{
-	background-color: lighten($neutral,10%);
-	@include border-radius(3px);
-	cursor: pointer;
-	padding: 2px 5px;
+
+#bt_img{
+	margin-top: 10px;
 }
 
-#infos{
+#infos1,
+#info2{
 	p{
-		margin-bottom:15px;
+		margin-bottom:3.5px;
 	}
 	.label_descr{
 		font-weight: bold;
+	}
+	.state-infos {
+		.label_descr {
+			float: left;
+			margin-right: 5px;
+		}
+		.selectize-control {
+			display: inline-block;
+		  	width: 40%;
+		  	margin-left: 20px;
+		}
+	}
+	.accepted {
+		display: block;
+  		margin-bottom: 17px;
+	}
+}
+
+.remark {
+	span {
+		font-weight : bold;
+	}
+	textarea {
+		border: none;
+		resize: none;
+		width: 90%;
+		vertical-align: top;
+		&:focus {
+			border: solid 1px $neutral;
+			background-color: #FFF !important;
+			color: #000000;
+			outline : none;
+		}
 	}
 }
 
 .accordion-head {
 		background: url('/images/accordion.png') no-repeat;
-		background-position: 97% -18px;
+		background-position: 97% -19px;
 		border: 0;
 		cursor: pointer;
 		margin-top: 30px;
@@ -55,17 +118,37 @@ header {
 		}	
 }
 
+
 	.list {
 		margin: 0px 0 10px;
 		@include border-radius(5px);
 		.check {
-				float: right;
-				margin: 15px 80px 0 0;
+				float: left;
+				margin: 15px 0 0 20px;
 				  -webkit-appearance: radio;			}
 		.head-list {
 			background-color: $head-list;
 			padding: 13px 27px 13px 10px;
-			@include border-radius(5px);		
+			@include border-radius(5px);
+			&:hover input{
+				background-color: lighten($head-list, 5%);
+			}
+			input{
+				float:left;
+				border:none;
+				margin-right: 20px;					
+				margin-top:-4px;
+				padding: 2px 5px !important;
+				@include border-radius(5px);
+				background-color: $head-list;
+			}
+			.delete_transportation{
+				margin: 3px 50px 0 0;
+				background: url("/images/picto-suppr.png") no-repeat;
+				width:15px;
+				height: 15px;				
+				background-position-x : 0px;
+			}
 			.name {
 				float:left;
 				margin-left: 20px;
@@ -74,7 +157,10 @@ header {
 			}			
 			.price {
 				float: right;
-				margin-right: 49px;
+				margin: -3px 49px 0 0;
+				input{
+					margin: -2px 5px 0 0!important;
+				}
 			}
 			
 		}
@@ -82,31 +168,17 @@ header {
 	.checked {
 			background-color: $color !important;
 			color:#fff;
-				input{
-					float:left;
-					border:none;
-					background-color: $color;
-					margin-right: 20px;
-					&:focus {
-						background-color: #FFF !important;
-						color: #000000;
-						outline : none;
-					}
-				}
+			.delete_transportation{				
+				background-position-x : -126px !important;
 			}
-	.nochecked {
-				input{
-					float:left;
-					border:none;
-					background-color: $head-list;
-					margin-right: 20px;
-					&:focus {
-						background-color: #FFF !important;
-						color: #000000;
-						outline : none;
-					}
-				}
+			input{				
+				background-color: $color !important;
+				color:#fff;			
 			}
+			&:hover input{
+				background-color: lighten($color, 7%) !important;
+			}
+	}
 	.labels.row {
 			margin: 0;
 			padding: 15px 15px 10px 15px;
@@ -120,29 +192,12 @@ header {
 		input{
 			border:none;
 			&:focus {
-				border: solid 1px $color;
+				border: solid 1px $neutral;
 				background-color: #FFF !important;
 				color: #000000;
 				outline : none;
 			}
 		}
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 0px) { 
-	#map_canvas { position:relative;width: 100%; height: 200px; } 
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-	#map_canvas { width: 50%; height: 200px; } 
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
-	#map_canvas { width: 40%; height: 200px; } 
-}
-
-
 
 .js .input-file-container {
   position: relative;
