bugs trouvés à 01h55min03sec du matin de la soutenance <3

--- a/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
@@ -184,6 +184,11 @@ span#legend {
 	font-size:12px;
 }
 
+.empty_cat_add_expense {
+	margin: auto;
+  	float: none;
+}
+
 #no-cat,
 #no-expense {
 	.empty {
