--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -31,7 +31,7 @@
     </div>
 
 	{% if module.places is empty %}
-		<p class="empty_module">{{'empty_module'|trans}}</p>
+		<p class="empty_module">{{'empty_module_place'|trans}}</p>
 	{% else %}
 		<div class="row list" id="list">
 			{% for place in module.places %}
