--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -62,9 +62,9 @@
 				    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
 				    		<div class="container-img-place">
 					    		{% if place.image != null %}
-					    			<img src="/images/place/places_pictures/{{place.image}}" />
+					    			<img src="/images/place/places_pictures/{{place.image}}" width="267"/>
 					    		{% else %}
-					    			<img src="/images/no-image.jpg"/>
+					    			<img src="/images/no-image.jpg" width="267"/>
 					    		{% endif %}
 				    		</div>
 								<div class="bt_place">
