croix suppr type depense

--- a/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
@@ -4,15 +4,6 @@ header {
 	border-color: $color;
 }
 
-/*#expense_form{
-	margin: auto !important;
-	width: 200px !important;
-	input{
-		margin:0;
-		width: 100%;
-	}
-}*/
-
 /*pie chart*/
 .pie_chart{
 	height: 300px; 
@@ -70,6 +61,7 @@ header {
 		background-position: 100% -294px;
 	}
 }
+
 
 @media (min-width: 992px) {
 
@@ -149,7 +141,7 @@ table{
 	}
 	.delete-inflow{
 		cursor:pointer;
-	}
+	}	
 }
 
 
@@ -474,7 +466,7 @@ a:hover, a:focus {
 
 /* sous menu depense */
 .sous-menu-depense{
-	margin:0 10px 0 10px;
+	margin:10px 10px 0 10px;
 	text-align: left;
 	height: 50px;
 	z-index: 1;
@@ -488,13 +480,29 @@ a:hover, a:focus {
 		margin-right:20px;
 		font-weight: bold;
 		vertical-align: middle;
-		padding: 15px 10px;
+		padding: 15px 0px 15px 10px;
 		cursor: pointer;
 		&:hover{
 			border-bottom:2px solid $color;
+			.delete_type_expense{
+				visibility: visible;
+			}
 		}
 	}
 	.tab-current{
 		border-bottom:2px solid $color;
+		.delete_type_expense{
+				visibility: visible;
+			}
+	}
+}
+
+.delete_type_expense{
+	margin-top: -15px;
+	margin-left: 10px;
+	visibility: hidden;
+	text-decoration: none !important;
+	&:hover{
+		color:darken($color,10%);
 	}
 }
