--- a/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
+++ b/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
@@ -23,7 +23,7 @@ button {
 	}
 }
 
-#placecontract_form{
+#transportationcontract_form{
 	background-color: lighten($neutral,10%);
 	@include border-radius(3px);
 	cursor: pointer;
