bouton image et contract ajout place et transport

--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -9,6 +9,14 @@ input{
 	padding: 2px 5px;
 }
 
+.bt_file{
+	background-color: lighten($color,10%);
+	@include border-radius(3px);
+	padding:2px 5px;
+	margin-bottom:10px !important;
+	color:#fff !important;
+}
+
 #state_place {
 	#state_label {
 		float:left;
