--- a/src/PlanIt/PlaceBundle/Resources/views/Place/form.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Place/form.html.twig
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
             <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-            <h4 class="modal-title" id="myModalLabel">{{'add_transportation'|trans}}</h4>
+            <h4 class="modal-title" id="myModalLabel">{{'add_place'|trans}}</h4>
             </div>
             <div class="modal-body">
                 <form id="form-post-guest" action="/app_dev.php/api/places/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
