--- a/src/PlanIt/UserBundle/Resources/public/css/header.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/header.scss
@@ -6,7 +6,7 @@ header {
 	height: 56px;
 	.user {
 		float: right;
-		margin:18px 70px 0 0;
+		margin:18px 90px 0 0;
 		img {
 			float: left;
 			height: 28px;
@@ -24,6 +24,21 @@ header {
 		}
 		.logout {
 			color : $blue_logo;
+		}
+	}
+	.bt_langages{
+		float: right;
+		display: inline-block;
+		margin: -28px 10px 0 0;
+		#english,#french{
+		background: url('/images/langues.png') no-repeat;
+		background-position-x : 0px;
+		width:25px;
+		height: 25px;
+		margin-right: 5px;
+		}
+		#french{
+			background-position-x : -50px;
 		}
 	}
 }
