cache changement langues

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,11 +32,11 @@
                             {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                         </a>
                     </div>
-                    <div style="clear:both"></div>  
+                   <!--  <div style="clear:both"></div>  
                     <div class="bt_langages">
                         <a href="#" id="english" class="pull-right"></a>
                         <a href="#" id="french" class="pull-right"/></a>
-                    </div>
+                    </div> -->
                 </header>
             {% endblock %}
 
